include/transcribe.h


typedef enum {
    TRANSCRIBE_OK                         = 0,
    TRANSCRIBE_ERR_INVALID_ARG            = 1,
    TRANSCRIBE_ERR_NOT_IMPLEMENTED        = 2,
    TRANSCRIBE_ERR_FILE_NOT_FOUND         = 3,
    TRANSCRIBE_ERR_GGUF                   = 4,
    TRANSCRIBE_ERR_UNSUPPORTED_ARCH       = 5,
    TRANSCRIBE_ERR_UNSUPPORTED_VARIANT    = 6,
    TRANSCRIBE_ERR_OOM                    = 7,
    TRANSCRIBE_ERR_BACKEND                = 8,
    TRANSCRIBE_ERR_SAMPLE_RATE            = 9,
    TRANSCRIBE_ERR_UNSUPPORTED_LANGUAGE   = 10,
    TRANSCRIBE_ERR_UNSUPPORTED_TASK       = 11,
    TRANSCRIBE_ERR_UNSUPPORTED_TIMESTAMPS = 12,
    TRANSCRIBE_ERR_ABORTED                = 13,
    TRANSCRIBE_ERR_BAD_STRUCT_SIZE        = 14,
    TRANSCRIBE_ERR_UNSUPPORTED_PNC        = 15,
    TRANSCRIBE_ERR_UNSUPPORTED_ITN        = 16,
    TRANSCRIBE_ERR_INPUT_TOO_LONG         = 17,
    TRANSCRIBE_ERR_OUTPUT_TRUNCATED       = 18,
} transcribe_status;
typedef enum {
    TRANSCRIBE_ABI_MODEL_LOAD_PARAMS = 0,
    TRANSCRIBE_ABI_SESSION_PARAMS    = 1,
    TRANSCRIBE_ABI_RUN_PARAMS        = 2,
    TRANSCRIBE_ABI_STREAM_PARAMS     = 3,
    TRANSCRIBE_ABI_CAPABILITIES      = 4,
    TRANSCRIBE_ABI_TIMINGS           = 5,
    TRANSCRIBE_ABI_SEGMENT           = 6,
    TRANSCRIBE_ABI_WORD              = 7,
    TRANSCRIBE_ABI_TOKEN             = 8,
    TRANSCRIBE_ABI_STREAM_UPDATE     = 9,
    TRANSCRIBE_ABI_STREAM_TEXT       = 10,
    TRANSCRIBE_ABI_SESSION_LIMITS    = 11,
    TRANSCRIBE_ABI_EXT               = 12,
    TRANSCRIBE_ABI_BACKEND_DEVICE    = 13,
} transcribe_abi_struct;
typedef enum {
    TRANSCRIBE_LOG_LEVEL_NONE  = 0,
    TRANSCRIBE_LOG_LEVEL_INFO  = 1,
    TRANSCRIBE_LOG_LEVEL_WARN  = 2,
    TRANSCRIBE_LOG_LEVEL_ERROR = 3,
    TRANSCRIBE_LOG_LEVEL_DEBUG = 4,
    TRANSCRIBE_LOG_LEVEL_CONT  = 5, 
} transcribe_log_level;
typedef enum {
    TRANSCRIBE_TASK_TRANSCRIBE = 0,
    TRANSCRIBE_TASK_TRANSLATE  = 1,
} transcribe_task;
typedef enum {
    TRANSCRIBE_TIMESTAMPS_NONE    = 0,
    TRANSCRIBE_TIMESTAMPS_AUTO    = 1,
    TRANSCRIBE_TIMESTAMPS_SEGMENT = 2,
    TRANSCRIBE_TIMESTAMPS_WORD    = 3,
    TRANSCRIBE_TIMESTAMPS_TOKEN   = 4,
} transcribe_timestamp_kind;
typedef enum {
    TRANSCRIBE_KV_TYPE_AUTO = 0,
    TRANSCRIBE_KV_TYPE_F32  = 1,
    TRANSCRIBE_KV_TYPE_F16  = 2,
} transcribe_kv_type;
enum transcribe_pnc_mode {
    TRANSCRIBE_PNC_MODE_DEFAULT = 0,
    TRANSCRIBE_PNC_MODE_OFF     = 1,
    TRANSCRIBE_PNC_MODE_ON      = 2,
};
enum transcribe_itn_mode {
    TRANSCRIBE_ITN_MODE_DEFAULT = 0,
    TRANSCRIBE_ITN_MODE_OFF     = 1,
    TRANSCRIBE_ITN_MODE_ON      = 2,
};
struct transcribe_ext {
    uint64_t size;
    uint32_t kind;
};
typedef enum {
    TRANSCRIBE_EXT_SLOT_RUN    = 0,
    TRANSCRIBE_EXT_SLOT_STREAM = 1,
} transcribe_ext_slot;
typedef enum {
    TRANSCRIBE_BACKEND_AUTO      = 0,
    TRANSCRIBE_BACKEND_CPU       = 1,
    TRANSCRIBE_BACKEND_METAL     = 2,
    TRANSCRIBE_BACKEND_VULKAN    = 3,
    TRANSCRIBE_BACKEND_CPU_ACCEL = 4,
    TRANSCRIBE_BACKEND_CUDA      = 5,
} transcribe_backend_request;
typedef enum {
    TRANSCRIBE_DEVICE_TYPE_CPU   = 0, 
    TRANSCRIBE_DEVICE_TYPE_GPU   = 1, 
    TRANSCRIBE_DEVICE_TYPE_IGPU  = 2, 
    TRANSCRIBE_DEVICE_TYPE_ACCEL = 3, 
} transcribe_device_type;
struct transcribe_backend_device {
    uint64_t               struct_size;  
    const char *           name;         
    const char *           description;  
    const char *           kind;         
    const char *           device_id;    
    uint64_t               memory_total; 
    uint64_t               memory_free;  
    transcribe_device_type device_type;  
};
struct transcribe_model_load_params {
    uint64_t                   struct_size;
    transcribe_backend_request backend;
    int                        gpu_device;
};
struct transcribe_session_params {
    uint64_t           struct_size;
    int                n_threads;
    transcribe_kv_type kv_type;
    int32_t            n_ctx;
};
struct transcribe_run_params {
    uint64_t struct_size;
    transcribe_task               task;
    transcribe_timestamp_kind     timestamps;
    enum transcribe_pnc_mode      pnc;
    enum transcribe_itn_mode      itn;
    const char *                  language;
    const char *                  target_language;
    bool                          keep_special_tags;
    const struct transcribe_ext * family;
    int32_t spec_k_drafts;
    const char * context;
};
struct transcribe_capabilities {
    uint64_t struct_size;
    int32_t                   native_sample_rate;
    int                       n_languages;
    const char * const *      languages;
    transcribe_timestamp_kind max_timestamp_kind;
    bool supports_language_detect;
    bool supports_translate;
    bool supports_streaming;
    bool supports_spec_decode;
    int64_t max_audio_ms;
    int                  n_translate_target_languages;
    const char * const * translate_target_languages;
};
typedef enum {
    TRANSCRIBE_FEATURE_INITIAL_PROMPT       = 0,
    TRANSCRIBE_FEATURE_TEMPERATURE_FALLBACK = 1,
    TRANSCRIBE_FEATURE_LONG_FORM            = 2,
    TRANSCRIBE_FEATURE_CANCELLATION         = 3,
    TRANSCRIBE_FEATURE_PNC                  = 4,
    TRANSCRIBE_FEATURE_ITN                  = 5,
} transcribe_feature;
struct transcribe_session_limits {
    uint64_t struct_size;
    int32_t  effective_n_ctx;
    int64_t  effective_max_audio_ms;
    int64_t  max_kv_bytes;
};
enum transcribe_stream_state {
    TRANSCRIBE_STREAM_IDLE     = 0,
    TRANSCRIBE_STREAM_ACTIVE   = 1,
    TRANSCRIBE_STREAM_FINISHED = 2,
    TRANSCRIBE_STREAM_FAILED   = 3,
};
typedef enum {
    TRANSCRIBE_STREAM_COMMIT_AUTO          = 0,
    TRANSCRIBE_STREAM_COMMIT_ON_FINALIZE   = 1,
    TRANSCRIBE_STREAM_COMMIT_STABLE_PREFIX = 2,
} transcribe_stream_commit_policy;
struct transcribe_stream_params {
    uint64_t                        struct_size;
    const struct transcribe_ext *   family;
    transcribe_stream_commit_policy commit_policy;
    uint32_t                        stable_prefix_agreement_n;
};
struct transcribe_stream_update {
    uint64_t struct_size;
    bool     result_changed;
    bool     is_final;
    int32_t  revision;
    int64_t  input_received_ms;
    int64_t  audio_committed_ms;
    int64_t  buffered_ms;
    bool     committed_changed;
    bool     tentative_changed;
};
struct transcribe_stream_text {
    uint64_t     struct_size;
    const char * full_text;
    uint64_t     full_text_bytes;
    const char * committed_text;
    uint64_t     committed_text_bytes;
    const char * tentative_text;
    uint64_t     tentative_text_bytes;
    uint64_t     raw_tentative_start_bytes;
};
struct transcribe_timings {
    uint64_t struct_size;
    float    load_ms;
    float    mel_ms;
    float    encode_ms;
    float    decode_ms;
};
struct transcribe_segment {
    uint64_t     struct_size;
    int64_t      t0_ms;
    int64_t      t1_ms;
    int          first_word;
    int          n_words;
    int          first_token;
    int          n_tokens;
    const char * text; 
};
struct transcribe_word {
    uint64_t     struct_size;
    int64_t      t0_ms;
    int64_t      t1_ms;
    int          seg_index;
    int          first_token;
    int          n_tokens;
    const char * text; 
};
struct transcribe_token {
    uint64_t     struct_size;
    int          id;
    float        p;
    int64_t      t0_ms;
    int64_t      t1_ms;
    int          seg_index;
    int          word_index;
    const char * text; 
};