bindings/python/src/transcribe_cpp/_generated.py

"""Low-level ctypes FFI for transcribe.cpp — AUTOGENERATED. DO NOT EDIT.

Regenerate with:
    uv run --no-project --with 'libclang==18.1.1' \
        bindings/python/_generate/generate.py

Source: include/transcribe/extensions.h
libclang: 18.1.1
"""

import ctypes as _c

# Stable digest of the ABI surface below (structs, enums, macros, layout,
# prototypes). A native provider package echoes this back so the API
# package can reject an ABI-mismatched provider before dlopen.
PUBLIC_HEADER_HASH = "3ba8dde028c487b6"

# === enum constants ===
TRANSCRIBE_OK = 0
TRANSCRIBE_ERR_INVALID_ARG = 1
TRANSCRIBE_ERR_NOT_IMPLEMENTED = 2
TRANSCRIBE_ERR_FILE_NOT_FOUND = 3
TRANSCRIBE_ERR_GGUF = 4
TRANSCRIBE_ERR_UNSUPPORTED_ARCH = 5
TRANSCRIBE_ERR_UNSUPPORTED_VARIANT = 6
TRANSCRIBE_ERR_OOM = 7
TRANSCRIBE_ERR_BACKEND = 8
TRANSCRIBE_ERR_SAMPLE_RATE = 9
TRANSCRIBE_ERR_UNSUPPORTED_LANGUAGE = 10
TRANSCRIBE_ERR_UNSUPPORTED_TASK = 11
TRANSCRIBE_ERR_UNSUPPORTED_TIMESTAMPS = 12
TRANSCRIBE_ERR_ABORTED = 13
TRANSCRIBE_ERR_BAD_STRUCT_SIZE = 14
TRANSCRIBE_ERR_UNSUPPORTED_PNC = 15
TRANSCRIBE_ERR_UNSUPPORTED_ITN = 16
TRANSCRIBE_ERR_INPUT_TOO_LONG = 17
TRANSCRIBE_ERR_OUTPUT_TRUNCATED = 18
TRANSCRIBE_ABI_MODEL_LOAD_PARAMS = 0
TRANSCRIBE_ABI_SESSION_PARAMS = 1
TRANSCRIBE_ABI_RUN_PARAMS = 2
TRANSCRIBE_ABI_STREAM_PARAMS = 3
TRANSCRIBE_ABI_CAPABILITIES = 4
TRANSCRIBE_ABI_TIMINGS = 5
TRANSCRIBE_ABI_SEGMENT = 6
TRANSCRIBE_ABI_WORD = 7
TRANSCRIBE_ABI_TOKEN = 8
TRANSCRIBE_ABI_STREAM_UPDATE = 9
TRANSCRIBE_ABI_STREAM_TEXT = 10
TRANSCRIBE_ABI_SESSION_LIMITS = 11
TRANSCRIBE_ABI_EXT = 12
TRANSCRIBE_ABI_BACKEND_DEVICE = 13
TRANSCRIBE_LOG_LEVEL_NONE = 0
TRANSCRIBE_LOG_LEVEL_INFO = 1
TRANSCRIBE_LOG_LEVEL_WARN = 2
TRANSCRIBE_LOG_LEVEL_ERROR = 3
TRANSCRIBE_LOG_LEVEL_DEBUG = 4
TRANSCRIBE_LOG_LEVEL_CONT = 5
TRANSCRIBE_TASK_TRANSCRIBE = 0
TRANSCRIBE_TASK_TRANSLATE = 1
TRANSCRIBE_TIMESTAMPS_NONE = 0
TRANSCRIBE_TIMESTAMPS_AUTO = 1
TRANSCRIBE_TIMESTAMPS_SEGMENT = 2
TRANSCRIBE_TIMESTAMPS_WORD = 3
TRANSCRIBE_TIMESTAMPS_TOKEN = 4
TRANSCRIBE_KV_TYPE_AUTO = 0
TRANSCRIBE_KV_TYPE_F32 = 1
TRANSCRIBE_KV_TYPE_F16 = 2
TRANSCRIBE_PNC_MODE_DEFAULT = 0
TRANSCRIBE_PNC_MODE_OFF = 1
TRANSCRIBE_PNC_MODE_ON = 2
TRANSCRIBE_ITN_MODE_DEFAULT = 0
TRANSCRIBE_ITN_MODE_OFF = 1
TRANSCRIBE_ITN_MODE_ON = 2
TRANSCRIBE_EXT_SLOT_RUN = 0
TRANSCRIBE_EXT_SLOT_STREAM = 1
TRANSCRIBE_BACKEND_AUTO = 0
TRANSCRIBE_BACKEND_CPU = 1
TRANSCRIBE_BACKEND_METAL = 2
TRANSCRIBE_BACKEND_VULKAN = 3
TRANSCRIBE_BACKEND_CPU_ACCEL = 4
TRANSCRIBE_BACKEND_CUDA = 5
TRANSCRIBE_DEVICE_TYPE_CPU = 0
TRANSCRIBE_DEVICE_TYPE_GPU = 1
TRANSCRIBE_DEVICE_TYPE_IGPU = 2
TRANSCRIBE_DEVICE_TYPE_ACCEL = 3
TRANSCRIBE_FEATURE_INITIAL_PROMPT = 0
TRANSCRIBE_FEATURE_TEMPERATURE_FALLBACK = 1
TRANSCRIBE_FEATURE_LONG_FORM = 2
TRANSCRIBE_FEATURE_CANCELLATION = 3
TRANSCRIBE_FEATURE_PNC = 4
TRANSCRIBE_FEATURE_ITN = 5
TRANSCRIBE_STREAM_IDLE = 0
TRANSCRIBE_STREAM_ACTIVE = 1
TRANSCRIBE_STREAM_FINISHED = 2
TRANSCRIBE_STREAM_FAILED = 3
TRANSCRIBE_STREAM_COMMIT_AUTO = 0
TRANSCRIBE_STREAM_COMMIT_ON_FINALIZE = 1
TRANSCRIBE_STREAM_COMMIT_STABLE_PREFIX = 2
TRANSCRIBE_WHISPER_PROMPT_FIRST_SEGMENT = 0
TRANSCRIBE_WHISPER_PROMPT_ALL_SEGMENTS = 1

# === macro constants (integer object-like macros) ===
TRANSCRIBE_EXT_KIND_MOONSHINE_STREAMING_STREAM = 1414746957
TRANSCRIBE_EXT_KIND_PARAKEET_BUFFERED_STREAM = 1396853584
TRANSCRIBE_EXT_KIND_PARAKEET_STREAM = 1414744912
TRANSCRIBE_EXT_KIND_VOXTRAL_REALTIME_STREAM = 1414746710
TRANSCRIBE_EXT_KIND_WHISPER_RUN = 1314015319

# === structs ===
class transcribe_ext(_c.Structure):
    pass
class transcribe_backend_device(_c.Structure):
    pass
class transcribe_model_load_params(_c.Structure):
    pass
class transcribe_session_params(_c.Structure):
    pass
class transcribe_run_params(_c.Structure):
    pass
class transcribe_capabilities(_c.Structure):
    pass
class transcribe_session_limits(_c.Structure):
    pass
class transcribe_stream_params(_c.Structure):
    pass
class transcribe_stream_update(_c.Structure):
    pass
class transcribe_stream_text(_c.Structure):
    pass
class transcribe_timings(_c.Structure):
    pass
class transcribe_segment(_c.Structure):
    pass
class transcribe_word(_c.Structure):
    pass
class transcribe_token(_c.Structure):
    pass
class transcribe_moonshine_streaming_stream_ext(_c.Structure):
    pass
class transcribe_parakeet_stream_ext(_c.Structure):
    pass
class transcribe_parakeet_buffered_stream_ext(_c.Structure):
    pass
class transcribe_voxtral_realtime_stream_ext(_c.Structure):
    pass
class transcribe_whisper_run_ext(_c.Structure):
    pass
class transcribe_whisper_chunk_trace(_c.Structure):
    pass

transcribe_ext._fields_ = [("size", _c.c_uint64), ("kind", _c.c_uint32)]
transcribe_backend_device._fields_ = [("struct_size", _c.c_uint64), ("name", _c.c_char_p), ("description", _c.c_char_p), ("kind", _c.c_char_p), ("device_id", _c.c_char_p), ("memory_total", _c.c_uint64), ("memory_free", _c.c_uint64), ("device_type", _c.c_int)]
transcribe_model_load_params._fields_ = [("struct_size", _c.c_uint64), ("backend", _c.c_int), ("gpu_device", _c.c_int)]
transcribe_session_params._fields_ = [("struct_size", _c.c_uint64), ("n_threads", _c.c_int), ("kv_type", _c.c_int), ("n_ctx", _c.c_int32)]
transcribe_run_params._fields_ = [("struct_size", _c.c_uint64), ("task", _c.c_int), ("timestamps", _c.c_int), ("pnc", _c.c_int), ("itn", _c.c_int), ("language", _c.c_char_p), ("target_language", _c.c_char_p), ("keep_special_tags", _c.c_bool), ("family", _c.POINTER(transcribe_ext)), ("spec_k_drafts", _c.c_int32), ("context", _c.c_char_p)]
transcribe_capabilities._fields_ = [("struct_size", _c.c_uint64), ("native_sample_rate", _c.c_int32), ("n_languages", _c.c_int), ("languages", _c.POINTER(_c.c_char_p)), ("max_timestamp_kind", _c.c_int), ("supports_language_detect", _c.c_bool), ("supports_translate", _c.c_bool), ("supports_streaming", _c.c_bool), ("supports_spec_decode", _c.c_bool), ("max_audio_ms", _c.c_int64), ("n_translate_target_languages", _c.c_int), ("translate_target_languages", _c.POINTER(_c.c_char_p))]
transcribe_session_limits._fields_ = [("struct_size", _c.c_uint64), ("effective_n_ctx", _c.c_int32), ("effective_max_audio_ms", _c.c_int64), ("max_kv_bytes", _c.c_int64)]
transcribe_stream_params._fields_ = [("struct_size", _c.c_uint64), ("family", _c.POINTER(transcribe_ext)), ("commit_policy", _c.c_int), ("stable_prefix_agreement_n", _c.c_uint32)]
transcribe_stream_update._fields_ = [("struct_size", _c.c_uint64), ("result_changed", _c.c_bool), ("is_final", _c.c_bool), ("revision", _c.c_int32), ("input_received_ms", _c.c_int64), ("audio_committed_ms", _c.c_int64), ("buffered_ms", _c.c_int64), ("committed_changed", _c.c_bool), ("tentative_changed", _c.c_bool)]
transcribe_stream_text._fields_ = [("struct_size", _c.c_uint64), ("full_text", _c.c_char_p), ("full_text_bytes", _c.c_uint64), ("committed_text", _c.c_char_p), ("committed_text_bytes", _c.c_uint64), ("tentative_text", _c.c_char_p), ("tentative_text_bytes", _c.c_uint64), ("raw_tentative_start_bytes", _c.c_uint64)]
transcribe_timings._fields_ = [("struct_size", _c.c_uint64), ("load_ms", _c.c_float), ("mel_ms", _c.c_float), ("encode_ms", _c.c_float), ("decode_ms", _c.c_float)]
transcribe_segment._fields_ = [("struct_size", _c.c_uint64), ("t0_ms", _c.c_int64), ("t1_ms", _c.c_int64), ("first_word", _c.c_int), ("n_words", _c.c_int), ("first_token", _c.c_int), ("n_tokens", _c.c_int), ("text", _c.c_char_p)]
transcribe_word._fields_ = [("struct_size", _c.c_uint64), ("t0_ms", _c.c_int64), ("t1_ms", _c.c_int64), ("seg_index", _c.c_int), ("first_token", _c.c_int), ("n_tokens", _c.c_int), ("text", _c.c_char_p)]
transcribe_token._fields_ = [("struct_size", _c.c_uint64), ("id", _c.c_int), ("p", _c.c_float), ("t0_ms", _c.c_int64), ("t1_ms", _c.c_int64), ("seg_index", _c.c_int), ("word_index", _c.c_int), ("text", _c.c_char_p)]
transcribe_moonshine_streaming_stream_ext._fields_ = [("ext", transcribe_ext), ("min_decode_interval_ms", _c.c_int32)]
transcribe_parakeet_stream_ext._fields_ = [("ext", transcribe_ext), ("att_context_right", _c.c_int32)]
transcribe_parakeet_buffered_stream_ext._fields_ = [("ext", transcribe_ext), ("left_ms", _c.c_int32), ("chunk_ms", _c.c_int32), ("right_ms", _c.c_int32)]
transcribe_voxtral_realtime_stream_ext._fields_ = [("ext", transcribe_ext), ("num_delay_tokens", _c.c_int32), ("min_decode_interval_ms", _c.c_int32)]
transcribe_whisper_run_ext._fields_ = [("ext", transcribe_ext), ("initial_prompt", _c.c_char_p), ("prompt_tokens", _c.POINTER(_c.c_int32)), ("n_prompt_tokens", _c.c_size_t), ("prompt_condition", _c.c_int), ("condition_on_prev_tokens", _c.c_bool), ("max_prev_context_tokens", _c.c_int32), ("temperature", _c.c_float), ("temperature_inc", _c.c_float), ("compression_ratio_thold", _c.c_float), ("logprob_thold", _c.c_float), ("no_speech_thold", _c.c_float), ("seed", _c.c_uint32), ("max_initial_timestamp", _c.c_float)]
transcribe_whisper_chunk_trace._fields_ = [("struct_size", _c.c_uint64), ("t0_ms", _c.c_int64), ("t1_ms", _c.c_int64), ("temperature_used", _c.c_float), ("compression_ratio", _c.c_float), ("avg_logprob", _c.c_float), ("no_speech_prob", _c.c_float), ("no_speech_triggered", _c.c_bool), ("n_fallbacks", _c.c_int32)]

# === ABI metadata ===
# transcribe_abi_struct id per struct (for the native size/align check).
ABI_STRUCT_IDS = {
    'transcribe_ext': 12,
    'transcribe_backend_device': 13,
    'transcribe_model_load_params': 0,
    'transcribe_session_params': 1,
    'transcribe_run_params': 2,
    'transcribe_capabilities': 4,
    'transcribe_session_limits': 11,
    'transcribe_stream_params': 3,
    'transcribe_stream_update': 9,
    'transcribe_stream_text': 10,
    'transcribe_timings': 5,
    'transcribe_segment': 6,
    'transcribe_word': 7,
    'transcribe_token': 8,
}
